--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "playingGames": [252490, 730, 1172470],
+    "playingGames": [252490, 730],
     "onlinestatus": 7,
-    "afkMessage": "Hi, I'm idling.",
+    "afkMessage": "",
     "loginDelay": 2000,
     "relogDelay": 15000,
     "useLocalIP": true,
