--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "playingGames": [252490]
+    "playingGames": [252490],
     "onlinestatus": 7,
     "afkMessage": "",
     "loginDelay": 2000,
